# FLSE

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
experiments/: distill_playground.py  inspect_word_geometry.py
flse/: __init__.py  geometry.py  losses.py  model.py  training.py
notebooks/: colab_flse_fractal.ipynb  colab_glove_filtered.ipynb
scripts/: distill_from_fake_teacher.py
tests/: test_geometry.py  test_model.py
