[tool.poetry]
name = "flse"
version = "0.1.0"
description = "Fractal Layered Spherical Embeddings (FLSE): modelo experimental de embeddings jerárquicos basados en hiperesferas y geometría fractal."
authors = ["Santiago Nieva <email@example.com>"]
license = "CC-BY-NC-4.0"
readme = "README.md"
packages = [{ include = "flse" }]

# Python requerido (elegí 3.10 o 3.11 si querés)
# Si venís usando pyenv 3.11.x, dejalo así:
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
torch = "^2.2"

# Dependencias opcionales de desarrollo
loguru = "^0.7.3"
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
isort = "^5.13"
mypy = "^1.8"

# Configuración del build
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
